# ca-project-1

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  run.sh
common/: CMakeLists.txt  binaryio.cpp  binaryio.hpp  info.cpp  info.hpp  progargs.cpp  progargs.hpp
ftest-aos/: CMakeLists.txt  readme.txt
ftest-soa/: CMakeLists.txt  readme.txt
imgaos/: CMakeLists.txt  compress.cpp  compress.hpp  cutfreq.cpp  cutfreq.hpp  imageaos.cpp  imageaos.hpp  info.cpp  maxlevel.cpp  maxlevel.hpp  resize.cpp  resize.hpp
imgsoa/: CMakeLists.txt  compress.cpp  compress.hpp  cutfreq.cpp  cutfreq.hpp  imagesoa.cpp  imagesoa.hpp  info.cpp  info.hpp  maxlevel.cpp  maxlevel.hpp  resize.cpp  resize.hpp
imtool-aos/: main.cpp
imtool-soa/: CMakeLists.txt  main.cpp
utest-common/: CMakeLists.txt  info_test.cpp  progargs_test.cpp
utest-imgaos/: CMakeLists.txt  compress_test.cpp  cutfreq_test.cpp  map_test.cpp  maxlevel_test.cpp  resize_test.cpp  test.cpp
utest-imgaos/input/cutfreq/: prueba.ppm
utest-imgaos/output/cutfreq/: prueba_output.ppm
utest-imgsoa/: CMakeLists.txt  cutfreq_test.cpp  map_test.cpp  maxlevel_test.cpp  resize_test.cpp  test.cpp
utest-imgsoa/output/cutfreq/: black-image.ppm
